--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,6 +73,7 @@ nav:
       - Main Characters:
           - Lyra Quen: lyra-quen.md
       - Profiles: character-profiles.md
+      - Virell Dane: characters/virell-dane.md
   - Worldbuilding:
       - Artifact & Architects: artifact-architects.md
       - Dual Timeline: dual-timeline.md
@@ -80,19 +81,32 @@ nav:
       - Expanded Worldbuilding: expanded-worldbuilding.md
       - Timeline of the Universe: timeline-universe.md
       - Worlds:
-          - Novasol Prime: worlds/novasol-prime.md
-          - Ferros: worlds/ferros.md
-          - Serenos: worlds/serenos.md
-          - Myrath: worlds/myrath.md
-          - Oura Station: worlds/oura-station.md
-          - Earth: worlds/earth.md
+          - Novasol Prime: planets/novasol-prime.md
+          - Ferros: planets/ferros.md
+          - Serenos: planets/serenos.md
+          - Myrath: planets/myrath.md
+          - Oura Station: planets/oura-station.md
+          - Earth: planets/earth.md
   - Factions & Politics:
-      - Council Violations: council-violations.md
+      - Council Violations: law/council-violation-system.md
       - Political Structure: factions-politics.md
       - Factions:
           - The Enlightened: factions/enlightened.md
           - The Veil: factions/veil.md
           - The Council: factions/council.md
+          - Bureau of Knowledge: factions/bureau-of-knowledge.md
+          - Bureau of Security: factions/bureau-of-security.md
+          - Bureau of Population: factions/bureau-of-population.md
+          - Bureau of Culture: factions/bureau-of-culture.md
+          - Bureau of Expansion: factions/bureau-of-expansion.md
+          - Council Compliance Authority (CCA): factions/cca.md
+          - Architects: factions/architects.md
+  - Concepts & Technology:
+      - Unity Creed: concepts/unity-creed.md
+      - Slipstream Gate: technology/slipstream-gate.md
+  - Locations & Events:
+      - Echo Archives: locations/echo-archives.md
+      - Proclamation of Ascendancy: events/proclamation-of-ascendancy.md
   - Themes:
       - Legacy & Trauma: legacy-trauma.md
   - Visual References: visual-references.md
